# rust-mcp-server

./: .gitignore  CLAUDE_SETUP.md  Cargo.toml  LICENSE  README.md  claude_config_helper.sh  test_server.sh
examples/: test_client.py
src/: lib.rs  main.rs  mcp.rs  server.rs  tools.rs  types.rs
tests/: integration_tests.rs
